# shift-main

./: .gitignore  Dockerfile  README.html  README.md  VMs.txt  install.sh  startup.sh
BrokerageCenter/: CMakeLists.txt  README.md  debug.sh
BrokerageCenter/config.default/: acceptor.cfg  dbLogin.txt  initiator.cfg
BrokerageCenter/include/: BCDocuments.h  CandlestickData.h  CandlestickDataPoint.h  DBConnector.h  ExecutionReport.h  FIXAcceptor.h  FIXInitiator.h  Interfaces.h  Order.h  OrderBook.h  OrderBookEntry.h  Parameters.h  PortfolioItem.h  PortfolioSummary.h  Quote.h  Report.h  RiskManagement.h  Stock.h  StockSummary.h  TempCandlestickData.h  TempStockSummary.h  TokenPool.h  TradingRecord.h  Transaction.h
BrokerageCenter/src/: BCDocuments.cpp  CandlestickData.cpp  CandlestickDataPoint.cpp  DBConnector.cpp  FIXAcceptor.cpp  FIXInitiator.cpp  Interfaces.cpp  Order.cpp  OrderBook.cpp  OrderBookEntry.cpp  PortfolioItem.cpp  PortfolioSummary.cpp  Quote.cpp  RiskManagement.cpp  Stock.cpp  StockSummary.cpp  TempCandlestickData.cpp  TempStockSummary.cpp  TokenPool.cpp  main.cpp
DatafeedEngine/: CMakeLists.txt  README.md  debug.sh
DatafeedEngine/config.default/: acceptor.cfg  dbLogin.txt  extract_raw.json
DatafeedEngine/include/: DBFIXDataCarrier.h  FIXAcceptor.h  MarketDataRequest.h  PSQL.h  Parameters.h  RawData.h  RequestsProcessorPerTarget.h  TRTHAPI.h  TRTHRequest.h
DatafeedEngine/src/: FIXAcceptor.cpp  MarketDataRequest.cpp  PSQL.cpp  RequestsProcessorPerTarget.cpp  TRTHAPI.cpp  main.cpp
LibCoreClient/: CMakeLists.txt  win-build.sh  win-build32.sh
LibCoreClient/include/: BestPrice.h  CoreClient.h  CoreClient_EXPORTS.h  Exceptions.h  FIXInitiator.h  Order.h  OrderBook.h  OrderBookEntry.h  OrderBookGlobalAsk.h  OrderBookGlobalBid.h  OrderBookLocalAsk.h  OrderBookLocalBid.h  Parameters.h  PortfolioItem.h  PortfolioSummary.h  Report.h
LibCoreClient/include/strategies/: IStrategy.h  IStrategyCreator.h  IStrategyMaker.h  StrategyCreator.h  StrategyFactory.h  StrategyMaker.h  StrategyParameter.h  ZeroIntelligence.h
LibCoreClient/pkg-config/: libshift_coreclient-d.pc  libshift_coreclient.pc
LibCoreClient/src/: BestPrice.cpp  CoreClient.cpp  FIXInitiator.cpp  Order.cpp  OrderBook.cpp  OrderBookEntry.cpp  OrderBookGlobalAsk.cpp  OrderBookGlobalBid.cpp  OrderBookLocalAsk.cpp  OrderBookLocalBid.cpp  PortfolioItem.cpp  PortfolioSummary.cpp  Report.cpp
LibCoreClient/src/strategies/: StrategyFactory.cpp  StrategyParameter.cpp  ZeroIntelligence.cpp
LibCoreClient/test/: CMakeLists.txt  initiator.cfg  testUtils.h  test_CancelAsk.cpp  test_CancelBid.cpp  test_CompanyList.cpp  test_Connect.cpp  test_CreateSymbolMap.cpp  test_LimitBuy.cpp  test_LimitSell.cpp  test_MarketBuy.cpp  test_MarketSell.cpp  test_Strategy.cpp  test_SubCandleData.cpp  test_SubOrderBook.cpp  test_UnsubCandleData.cpp  test_UnsubOrderBook.cpp
LibMiscUtils/: CMakeLists.txt  win-build.sh  win-build32.sh
LibMiscUtils/filecryptor/: CMakeLists.txt  main.cpp  sample.txt
LibMiscUtils/guidtester/: CMakeLists.txt  main.cpp
LibMiscUtils/include/: Common.h  MiscUtils_EXPORTS.h
LibMiscUtils/include/clock/: BasicTime.h  Timestamp.h
LibMiscUtils/include/concurrency/: Consumer.h  Spinlock.h
LibMiscUtils/include/crossguid/: Guid.h
LibMiscUtils/include/crypto/: Decryptor.h  Encryptor.h
LibMiscUtils/include/database/: Common.h  Tables.h
LibMiscUtils/include/fix/: HelperFunctions.h
LibMiscUtils/include/statistics/: Basic.h  BasicStatistics.h
LibMiscUtils/include/terminal/: Common.h  Functions.h  Options.h
LibMiscUtils/pkg-config/: libshift_miscutils-d.pc  libshift_miscutils.pc
LibMiscUtils/src/: Common.cpp
LibMiscUtils/src/clock/: BasicTime.cpp  Timestamp.cpp
LibMiscUtils/src/crossguid/: Guid.cpp
LibMiscUtils/src/crypto/: Cryptor.cpp  Cryptor.h  Decryptor.cpp  Encryptor.cpp  SHA1.cpp  SHA1.h
LibMiscUtils/src/database/: Common.cpp  Tables.cpp
LibMiscUtils/src/terminal/: Common.cpp  Options.cpp
LibMiscUtils/trthrestdownloader/: CMakeLists.txt  README.txt  cred.json  extractRaw.json  main.cpp
LibMiscUtils/trthrestdownloader/tools/: comp_cols.py  read_cols.py  read_cols_2.py
NewMatchingEngine/: CMakeLists.txt  debug.sh
NewMatchingEngine/config.default/: acceptor.cfg  config.txt  dbLogin.txt  initiator.cfg
NewMatchingEngine/include/: CommonStock.h  Instrument.h  LimitOrder.h  MarketOrder.h  Order.h  PriceLevel.h
NewMatchingEngine/src/: CommonStock.cpp  Instrument.cpp  LimitOrder.cpp  MarketOrder.cpp  Order.cpp  PriceLevel.cpp  main.cpp
WebClient/backend/: CMakeLists.txt  debug.sh
WebClient/backend/include/: DBConnector.h  MainClient.h  MyZMQ.h  SHIFTServiceHandler.h  UserClient.h
WebClient/backend/service/thrift/: 1  SHIFTService.php  client.py  py-gen.sh  shift_service.thrift  testGetByDay.py  testGetLeaderboard.py  testGetUser.py  testIsLogin.py  testRegister.py
WebClient/backend/service/thrift/gen-cpp/: SHIFTService.cpp  SHIFTService.h  SHIFTService_server.skeleton.cpp  shift_service_constants.cpp  shift_service_constants.h  shift_service_types.cpp  shift_service_types.h
WebClient/backend/service/thrift/gen-php/client/: SHIFTServiceClient.php  SHIFTServiceIf.php  SHIFTService_change_password_result.php  SHIFTService_getAllTraders_args.php  SHIFTService_getAllTraders_result.php  SHIFTService_getThisLeaderboardByDay_args.php  SHIFTService_getThisLeaderboard_args.php  SHIFTService_get_user_by_username_result.php  SHIFTService_registerUser_args.php  SHIFTService_submitOrder_args.php  SHIFTService_webClientSendUsername_args.php  SHIFTService_webClientSendUsername_result.php  SHIFTService_webUserLoginV2_result.php  SHIFTService_webUserLogin_args.php  SHIFTService_webUserLogin_result.php
WebClient/backend/service/thrift/shiftpy/shift_service/: SHIFTService-remote  (+2 more)
WebClient/backend/service/thrift/tests/: client.py  testChangePW.py  testChangepw.py  testGetByDay.py  testGetLeaderboard.py  testGetUser.py  testIsLogin.py  testLogin.py  testRegister.py
WebClient/backend/src/: DBConnector.cpp  MainClient.cpp  MyZMQ.cpp  SHIFTServiceHandler.cpp  UserClient.cpp  main.cpp
(+263 files in other folders)
